--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,5 +1,9 @@
 // COLORS
 :root {
-  --color-black: #000;
   --color-white: #fff;
+  --color-main: #2c343e;
+  --color-shaft: #333333;
+  --color-cinnabar: #e54137;
+  --color-gray: #e4e7eb;
+  --color-bali-hai: #8296b0;
 }
