--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,1 @@
-// @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+@include font-face("Rubik", "../fonts/Rubik-Medium", 500, normal);
