added show more btn with js

--- a/src/partials/content/catalog.html
+++ b/src/partials/content/catalog.html
@@ -51,6 +51,8 @@
         <a class="catalog__link" href="#">Электропогрузчики</a>
       </li>
     </ul>
-    <button class="catalog__btn btn" type="button">Смотреть весь каталог</button>
+    <button class="catalog__more btn " type="button">
+      Смотреть весь каталог
+    </button>
   </div>
 </section>
