--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -14,7 +14,6 @@
     grid-auto-flow: dense;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 270px;
-    margin-bottom: 40px;
     grid-gap: 30px;
   }
 
@@ -28,10 +27,14 @@
     &--down {
       grid-row: span 2;
     }
-  }
 
-  &__block {
+    &:nth-child(n+6) {
+      display: none;
+    }
 
+    &.is-visible {
+      display: block;
+    }
   }
 
   &__image {
@@ -52,12 +55,14 @@
     background-color: rgba(242, 242, 242, 1);
     transition: background-color 0.3s ease-in-out;
 
+    &:focus,
     &:hover {
       background-color: rgba(255, 255, 255, 0.7);
     }
   }
 
-  &__btn {
+  &__more {
     width: 100%;
+    margin-top: 40px;
   }
 }
