--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -1,5 +1,15 @@
+@import "../mixins";
+
 .catalog {
   padding: 71px 0 102px;
+
+  @include small-tablet {
+    padding: 45px 0 55px;
+  }
+
+  @include mobile {
+    padding: 38px 0 42px;
+  }
 
   &__title {
     margin: 0;
@@ -7,6 +17,15 @@
     font-weight: 500;
     font-size: 32px;
     color: var(--color-shaft);
+
+    @include small-tablet {
+      font-size: 24px;
+      margin-bottom: 22px;
+    }
+
+    @include mobile {
+      font-size: 18px;
+    }
   }
 
   &__inner {
@@ -14,7 +33,17 @@
     grid-auto-flow: dense;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 270px;
-    grid-gap: 30px;
+    gap: 30px 2.6%;
+
+    @include small-tablet {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @include mobile {
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: 136px;
+      gap: 8px;
+    }
   }
 
   &__item {
@@ -26,6 +55,11 @@
 
     &--down {
       grid-row: span 2;
+      
+      @include small-tablet {
+        order: 1;
+        grid-column: span 1;
+      }
     }
 
     &:nth-child(n+6) {
@@ -55,6 +89,11 @@
     background-color: rgba(242, 242, 242, 1);
     transition: background-color 0.3s ease-in-out;
 
+    @include mobile {
+      padding: 9px 12px;
+      font-size: 15px;
+    }
+
     &:focus,
     &:hover {
       background-color: rgba(255, 255, 255, 0.7);
@@ -64,5 +103,9 @@
   &__more {
     width: 100%;
     margin-top: 40px;
+
+    @include mobile {
+      margin-top: 18px;
+    }
   }
 }
